--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-import": "^1.11.0",
     "node-sass": "^4.11.0",
     "react-app-rewired": "^2.0.2-next.0",
+    "react-redux": "^6.0.0",
     "sass-loader": "^7.1.0"
   }
 }
